@@ -1,5 +1,10 @@
 2006-03-25  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/IModuleDefinition.cs
+	  Mono.Cecil/ModuleDefinition.cs
+	  Mono.Cecil/ReflectionWriter.cs:
+		Add a FullLoad method on a module.
+
 	* Mono.Cecil/StructureWriter.cs
 	  Mono.Cecil/ReflectionWriter.cs:
 		Fix a  few bugs in generics type emitting.
